major refactor to remove maven and use gradle entirely - build to publish